Dark Mode Feature Function Fix Code

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Layer Base */
+@layer base {
+    body {
+        @apply dark:bg-black dark:text-gray-100 bg-gray-100 text-gray-900
+    }
+
+    .highlight:before {
+      @apply dark:bg-zinc-800
+    }
+}
